# Grasper

./: .gitignore  CMakeLists.txt  auto-build.sh  grasper-conf.ini  ib.cfg  machine.cfg
base/: node.hpp  type.hpp
core/: experts_adapter.hpp  index_store.hpp  parser.cpp  parser.hpp  tcp_mailbox.cpp
driver/: master.hpp  server.cpp  worker.hpp
expert/: barrier_expert.hpp  init_expert.hpp  label_index_expert.hpp  labelled_branch_expert.hpp  traversal_expert.hpp
utils/: mpi_unique_namer.cpp
